; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_ext2fs_ext_attr_hash_entry2.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_ext2fs_ext_attr_hash_entry2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_ext_attr_entry = type { i64 }

@VALUE_HASH_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ext2fs_ext_attr_hash_entry2(i32 %0, %struct.ext2_ext_attr_entry* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ext2_ext_attr_entry*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store %struct.ext2_ext_attr_entry* %1, %struct.ext2_ext_attr_entry** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load %struct.ext2_ext_attr_entry*, %struct.ext2_ext_attr_entry** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @ext2fs_ext_attr_hash_entry(%struct.ext2_ext_attr_entry* %12, i8* %13)
  %15 = load i32*, i32** %9, align 8
  store i32 %14, i32* %15, align 4
  %16 = load %struct.ext2_ext_attr_entry*, %struct.ext2_ext_attr_entry** %7, align 8
  %17 = getelementptr inbounds %struct.ext2_ext_attr_entry, %struct.ext2_ext_attr_entry* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %46

20:                                               ; preds = %4
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.ext2_ext_attr_entry*, %struct.ext2_ext_attr_entry** %7, align 8
  %23 = getelementptr inbounds %struct.ext2_ext_attr_entry, %struct.ext2_ext_attr_entry* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i64 @read_ea_inode_hash(i32 %21, i64 %24, i32* %10)
  store i64 %25, i64* %11, align 8
  %26 = load i64, i64* %11, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i64, i64* %11, align 8
  store i64 %29, i64* %5, align 8
  br label %47

30:                                               ; preds = %20
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @VALUE_HASH_SHIFT, align 4
  %34 = shl i32 %32, %33
  %35 = load i32*, i32** %9, align 8
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @VALUE_HASH_SHIFT, align 4
  %38 = sext i32 %37 to i64
  %39 = sub i64 32, %38
  %40 = trunc i64 %39 to i32
  %41 = ashr i32 %36, %40
  %42 = xor i32 %34, %41
  %43 = load i32, i32* %10, align 4
  %44 = xor i32 %42, %43
  %45 = load i32*, i32** %9, align 8
  store i32 %44, i32* %45, align 4
  br label %46

46:                                               ; preds = %30, %4
  store i64 0, i64* %5, align 8
  br label %47

47:                                               ; preds = %46, %28
  %48 = load i64, i64* %5, align 8
  ret i64 %48
}

declare dso_local i32 @ext2fs_ext_attr_hash_entry(%struct.ext2_ext_attr_entry*, i8*) #1

declare dso_local i64 @read_ea_inode_hash(i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
